src/app/torrents-table/torrents-table.component.css
.hidden {
  display: none;
}

.torrent-table-container {
    display: flex;
    flex-direction: column;
}

th.mat-sort-header-sorted {
    color: black;
}

mat-spinner {
    align-self: center;
    margin: 5% auto 10px auto;
}

mat-table {
    height: 73vh;
    overflow-y: scroll;
}

progress-bar {
    width: 100%;
}

.mat-row {
    transition: background-color 0.15s ease;
    background-color: unset;
}

.mat-row:hover {
    background-color: #f2f2f2;

}

.dark-theme .mat-row:hover {
    background-color: #5c5c5c;
}

.mat-cell {
    font-size: 13.5px;
}

#deleteTorrents {
    margin: 15px;
    margin-left: 10px;
}

#loading_p {
    width: 50px;
    align-self: center;
    margin: 10px auto 10px auto;
}

/** Sizes of each column */
.mat-column-Name {
    flex: 0 0 27% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    margin-left: 20px;

    min-width: 300px;
}

.mat-column-select {
    flex: 0 0 3% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    min-width: 55px;
    margin-left: 10px;
}

.mat-column-Actions {
    flex: 0 0 8% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    margin: 2px;

    min-width: 150px;
}

.mat-column-Size {
    flex: 0 0 5% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    padding-left: 10px;
    justify-content: center;

    min-width: 80px;
}

.mat-column-Progress {
    flex: 0 0 12% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    min-width: 180px;
    margin-left: 10px;
    margin-right: 10px;
}

.mat-column-Status {
    flex: 0 0 !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    min-width: 120px;
    margin-left: 10px;
    margin-right: 10px;
}

.mat-column-Down_Speed {
    flex: 0 0 5% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    min-width: 90px;
}

.mat-column-Up_Speed {
    flex: 0 0 5% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    min-width: 90px;
}

.mat-column-ETA {
    flex: 0 0 !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    padding-left: 5px;
    padding-right: 5px;

    justify-content: center;

    min-width: 140px;
}


.mat-column-Completed_On {
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    min-width: 150px;
}

